--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Joululista</title>
+  <title>Joululista🎄</title>
 
   <!-- Linkitetään ulkoinen tyylitiedosto -->
   <link rel="stylesheet" href="styles.css">
@@ -28,7 +28,7 @@
   <!-- Sovelluksen pääkontti -->
   <main class="container">
     <!-- Otsikko -->
-    <h1>Joulun ostoslista</h1>
+    <h1>Joulun ostoslista🎅</h1>
 
     <!-- Lomake uuden tuotteen lisäämiseen -->
     <form id="item-form" aria-label="Lisää ostettava tuote">
